--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -18,7 +18,7 @@
           </small>
           </div>
         </div>
-        <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+        <h2><a class="article-title" href="{% url 'post-detail' post.slug %}">{{ post.title }}</a></h2>
         <p class="article-content">{{ post.content|slice:200 }}...</p>
       </div>
     </article>
@@ -26,8 +26,8 @@
       {% if is_paginated %}
 
         {% if page_obj.has_previous %}
-          <a class="btn btn-outline-secondary mb-4" href="?page=1">First</a>
-          <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+          <a class="btn btn-outline-secondary mb-4" href="?page=1">&lt;&#45;&#45;</a>
+          <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.previous_page_number }}">&lt;&#45;</a>
         {% endif %}
 
         {% for num in page_obj.paginator.page_range %}
@@ -39,8 +39,8 @@
         {% endfor %}
 
         {% if page_obj.has_next %}
-          <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-          <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+          <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.next_page_number }}">&#45;&gt;</a>
+          <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.paginator.num_pages }}">&#45;&#45;&gt;</a>
         {% endif %}
 
   {% endif %}
